RESOLVED FIXED31492
DOMHTMLInputElement::replaceCharactersInRange() is unimplemented
https://bugs.webkit.org/show_bug.cgi?id=31492
Summary DOMHTMLInputElement::replaceCharactersInRange() is unimplemented
Jon Honeycutt
Reported 2009-11-13 14:10:16 PST
DOMHTMLInputElement::replaceCharactersInRange() is stubbed.
Attachments
patch (2.96 KB, patch)
2009-11-13 14:17 PST, Jon Honeycutt
mitz: review+
jhoneycutt: commit-queue-
Jon Honeycutt
Comment 1 2009-11-13 14:17:15 PST
mitz
Comment 2 2009-11-14 16:26:21 PST
Comment on attachment 43202 [details] patch > + ASSERT(m_element && m_element->hasTagName(inputTag)); Please split into two separate assertions.
Jon Honeycutt
Comment 3 2009-11-17 15:40:40 PST
I made Dan's change. Landed in r51094.
Note You need to log in before you can comment on or make changes to this bug.