Implement DOMHTMLInputElement::replaceCharactersInRange().

https://bugs.webkit.org/show_bug.cgi?id=31492

Reviewed by Dan Bernstein.

* DOMHTMLClasses.cpp:
(DOMHTMLInputElement::replaceCharactersInRange):
Get the text of the input field. Replace the given range with the
replacement text, and set this new string as the input element's value.
Select from index to the end of the field. This matches the
implementation in the Obj-C bindings.

Canonical link: https://commits.webkit.org/42523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51094 268f45cc-cd09-0410-ab3c-d52691b4dbfc